--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 				<section>
 					<div class="row">
 						<div class="three col">4. <span data-lang="howManyGuests">How Many Guests?</span></div>
-						<div class="one col"><input type="number" id="user-people"></div>
+						<div class="one col"><input type="number" id="user-people" placeholder="1"></div>
 					</div>
 				</section>
 
